# qt-animation-timeline

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  agents.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: demo.py
src/qt_animation_editor/: __init__.py  easing.py  editor.py  models.py
src/qt_animation_timeline/: __init__.py  easing.py  editor.py  models.py  qt_timeline.py  state.py
tests/: test_easing.py  test_models.py  test_qt_animation_editor.py  test_qt_animation_timeline.py
